--- a/src/notebooks/02-simulate-dataset.ipynb
+++ b/src/notebooks/02-simulate-dataset.ipynb
@@ -41,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ All environment variables configured!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -72,11 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Azure AI Search configured with index: zava-products\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize Azure AI Search connection parameters\n",
     "search_endpoint = os.environ.get(\"AZURE_SEARCH_ENDPOINT\")\n",
@@ -97,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model configuration created for: gpt-4.1\n"
+     ]
+    }
+   ],
    "source": [
     "from azure.ai.evaluation import AzureOpenAIModelConfiguration\n",
     "\n",
@@ -125,9 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Class Simulator: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Simulator initialized successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Initialize the Azure AI Evaluation Simulator\n",
     "from azure.ai.evaluation.simulator import Simulator\n",
@@ -150,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,9 +262,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Search test successful!\n",
+      "📄 Retrieved response: Durable eggshell finish paint with subtle sheen, ideal for living rooms and bedrooms with easy cleanup. Wire grid insert for paint buckets to remove excess paint from brushes and rollers. Environmentally friendly zero-VOC paint for healthy indoor air quality in all living spaces. Flexible elastomeric paint for stucco and masonry that bridges hairline cracks and prevents water penetration. Premium acrylic exterior paint with fade resistance and superior adhesion for long-lasting protection. for query: 'eggshell paint'\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the search function with a sample query\n",
     "test_query = \"eggshell paint\"\n",
@@ -250,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,9 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Ready to simulate with 494 characters of content\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify the retrieved content is ready for simulation\n",
     "if not retrieved_content:\n",
@@ -363,9 +419,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.12/site-packages/azure/ai/evaluation/simulator/_simulator.py:157: UserWarning: You have specified 'num_queries' > len('tasks') (10 > 0). All tasks will be used for generation and the remaining 10 lines will be simulated in task-free mode\n",
+      "  warnings.warn(\n",
+      "Generating: 100%|██████████████████████████████████████████████| 10/10 [00:21<00:00,  2.12s/message]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Generated 10 synthetic query-response pairs!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -392,9 +472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset saved to: /workspaces/aitour26-LTG151-fork/src/notebooks/02-simulate-dataset.jsonl\n"
+     ]
+    }
+   ],
    "source": [
     "output_file = Path(\"02-simulate-dataset.jsonl\")\n",
     "\n",
@@ -417,9 +505,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset loaded: 10 rows, 3 columns\n",
+      "📋 Columns: ['query', 'response', 'context']\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>query</th>\n",
+       "      <th>response</th>\n",
+       "      <th>context</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>What type of finish does the durable eggshell paint have?</td>\n",
+       "      <td>The durable eggshell paint has a subtle sheen finish.</td>\n",
+       "      <td>Durable eggshell finish paint with subtle sheen, ideal for living rooms...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Which rooms is the durable eggshell finish paint ideal for?</td>\n",
+       "      <td>The durable eggshell finish paint is ideal for living rooms and bedrooms.</td>\n",
+       "      <td>Durable eggshell finish paint with subtle sheen, ideal for living rooms...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>What feature makes the durable eggshell finish paint easy to maintain?</td>\n",
+       "      <td>The durable eggshell finish paint is easy to maintain because it allows...</td>\n",
+       "      <td>Durable eggshell finish paint with subtle sheen, ideal for living rooms...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>What tool is used to remove excess paint from brushes and rollers in pa...</td>\n",
+       "      <td>The tool used to remove excess paint from brushes and rollers in paint ...</td>\n",
+       "      <td>Wire grid insert for paint buckets to remove excess paint from brushes ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>What is the main environmental benefit of the zero-VOC paint?</td>\n",
+       "      <td>The main environmental benefit of the zero-VOC paint is that it helps m...</td>\n",
+       "      <td>Environmentally friendly zero-VOC paint for healthy indoor air quality ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>What type of paint is recommended for healthy indoor air quality in all...</td>\n",
+       "      <td>The recommended paint for healthy indoor air quality in all living spac...</td>\n",
+       "      <td>Environmentally friendly zero-VOC paint for healthy indoor air quality ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Which paint is designed to bridge hairline cracks and prevent water pen...</td>\n",
+       "      <td>The flexible elastomeric paint for stucco and masonry is designed to br...</td>\n",
+       "      <td>Flexible elastomeric paint for stucco and masonry that bridges hairline...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>What surfaces is the flexible elastomeric paint suitable for?</td>\n",
+       "      <td>The flexible elastomeric paint is suitable for stucco and masonry surfa...</td>\n",
+       "      <td>Flexible elastomeric paint for stucco and masonry that bridges hairline...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Which paint offers fade resistance and superior adhesion for long-lasti...</td>\n",
+       "      <td>The premium acrylic exterior paint offers fade resistance and superior ...</td>\n",
+       "      <td>Premium acrylic exterior paint with fade resistance and superior adhesi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>What is a key benefit of premium acrylic exterior paint?</td>\n",
+       "      <td>A key benefit of premium acrylic exterior paint is its fade resistance ...</td>\n",
+       "      <td>Premium acrylic exterior paint with fade resistance and superior adhesi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                        query  \\\n",
+       "0                   What type of finish does the durable eggshell paint have?   \n",
+       "1                 Which rooms is the durable eggshell finish paint ideal for?   \n",
+       "2      What feature makes the durable eggshell finish paint easy to maintain?   \n",
+       "3  What tool is used to remove excess paint from brushes and rollers in pa...   \n",
+       "4               What is the main environmental benefit of the zero-VOC paint?   \n",
+       "5  What type of paint is recommended for healthy indoor air quality in all...   \n",
+       "6  Which paint is designed to bridge hairline cracks and prevent water pen...   \n",
+       "7               What surfaces is the flexible elastomeric paint suitable for?   \n",
+       "8  Which paint offers fade resistance and superior adhesion for long-lasti...   \n",
+       "9                    What is a key benefit of premium acrylic exterior paint?   \n",
+       "\n",
+       "                                                                     response  \\\n",
+       "0                       The durable eggshell paint has a subtle sheen finish.   \n",
+       "1   The durable eggshell finish paint is ideal for living rooms and bedrooms.   \n",
+       "2  The durable eggshell finish paint is easy to maintain because it allows...   \n",
+       "3  The tool used to remove excess paint from brushes and rollers in paint ...   \n",
+       "4  The main environmental benefit of the zero-VOC paint is that it helps m...   \n",
+       "5  The recommended paint for healthy indoor air quality in all living spac...   \n",
+       "6  The flexible elastomeric paint for stucco and masonry is designed to br...   \n",
+       "7  The flexible elastomeric paint is suitable for stucco and masonry surfa...   \n",
+       "8  The premium acrylic exterior paint offers fade resistance and superior ...   \n",
+       "9  A key benefit of premium acrylic exterior paint is its fade resistance ...   \n",
+       "\n",
+       "                                                                      context  \n",
+       "0  Durable eggshell finish paint with subtle sheen, ideal for living rooms...  \n",
+       "1  Durable eggshell finish paint with subtle sheen, ideal for living rooms...  \n",
+       "2  Durable eggshell finish paint with subtle sheen, ideal for living rooms...  \n",
+       "3  Wire grid insert for paint buckets to remove excess paint from brushes ...  \n",
+       "4  Environmentally friendly zero-VOC paint for healthy indoor air quality ...  \n",
+       "5  Environmentally friendly zero-VOC paint for healthy indoor air quality ...  \n",
+       "6  Flexible elastomeric paint for stucco and masonry that bridges hairline...  \n",
+       "7  Flexible elastomeric paint for stucco and masonry that bridges hairline...  \n",
+       "8  Premium acrylic exterior paint with fade resistance and superior adhesi...  \n",
+       "9  Premium acrylic exterior paint with fade resistance and superior adhesi...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
